ingress.yaml
# install nginx ingress controller
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.0/deploy/static/provider/baremetal/deploy.yaml
# kubernetes dashboard
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-dashboard
#   namespace: kubernetes-dashboard
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: dev.kiki
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: kubernetes-dashboard
#             port:
#               number: 8080





































































apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ahmadanbarje.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-deployment
            port:
              number: 3344

    # http:
    #   paths:
    #   - path: /
    #     pathType: Prefix
    #     backend:
    #       service:
    #         name: expressjs-service
    #         port:
    #           number: 3344

# without TLS
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: express-service
#             port:
#               number: 4001
